Bug 153514 - STYLE finds wrong style with different case
Summary: STYLE finds wrong style with different case
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4.6
Keywords:
Depends on:
Blocks: Calc-Styles
  Show dependency treegraph
 
Reported: 2023-02-10 08:57 UTC by Mike Kaganski
Modified: 2023-03-29 06:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-02-10 08:57:04 UTC
1. In a spreadsheet, see that it has a style named "Bad" (note the uppercase "B").
2. Add a style named "bad" (all lowercase), with different properties.
3. In a cell, enter the formula

  =STYLE("bad")

Expected: the cell gets the manually added "bad" style.
Actual: it gets "Bad" style.

The same in OOo 1.0.3 from 2002.

It only should work case-insensitively, when there's no exact match.
Comment 1 Mike Kaganski 2023-02-10 10:27:50 UTC
https://gerrit.libreoffice.org/c/core/+/146747
Comment 2 Commit Notification 2023-02-10 16:13:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a984c77ccb1aa77d9bbd02218d4dc76aaff4a9e

tdf#153514: try to find exact match, even when searching case-insensitively

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-02-13 00:03:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/b8efa9e460f358d42662e385ef5101cca053d8c7

tdf#153514: try to find exact match, even when searching case-insensitively

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-02-13 11:54:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/d2185f73be42c7fa3ccf3c21b2636c51f71f41be

tdf#153514: try to find exact match, even when searching case-insensitively

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-03-21 04:34:48 UTC
Baole Fang committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8cf73a9a8227f90217c595be04519f0c3692754c

tdf#153514: sc_subsequent_filters_test4: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.